test/runnable/private_.nt
module private_;

macro import std.macro.assert;

class A {
    private int i;
    this(this.i) { }
    bool same(A other) {
        return i == other.i;
    }
}

struct S {
    private int i;
    bool same(S other) {
        return this.i == other.i;
    }
}

void main() {
    assert((new A(5)).same(new A(5)));
    assert(!S(6).same(S(8)));
}
