test/fail_compilation/struct_private_method.nt
module struct_private_method;

struct S {
    private int foo() { return 5; }
}

void main() {
    int f = S().foo;
}
